[gd_scene load_steps=9 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://platformer/src/ui/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://platformer/src/ui/title_screen.gd" type="Script" id=3]
[ext_resource path="res://platformer/src/day_background.tscn" type="PackedScene" id=4]
[ext_resource path="res://platformer/src/ui/click_sound.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Wiggle"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ -10.0, 10.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "ShowOptions"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("OptionsMenu:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainMenu:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="UI" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="TextureRect" parent="UI"]
margin_left = 480.0
margin_top = 159.0
margin_right = 544.0
margin_bottom = 223.0
rect_rotation = 10.0
rect_pivot_offset = Vector2( 32, 33 )
size_flags_horizontal = 4
size_flags_vertical = 6
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/Title"]
autoplay = "Wiggle"
anims/RESET = SubResource( 1 )
anims/Wiggle = SubResource( 2 )

[node name="Menus" type="Control" parent="UI"]
margin_top = 386.0
margin_right = 1024.0
margin_bottom = 768.0
size_flags_vertical = 3

[node name="MainMenu" type="VBoxContainer" parent="UI/Menus"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = -12.0
grow_horizontal = 0
size_flags_horizontal = 4
size_flags_vertical = 2
theme = ExtResource( 2 )

[node name="StartButton" type="Button" parent="UI/Menus/MainMenu"]
margin_left = 460.0
margin_right = 544.0
margin_bottom = 42.0
size_flags_horizontal = 4
text = "开始"

[node name="OptionsButton" type="Button" parent="UI/Menus/MainMenu"]
margin_left = 460.0
margin_top = 72.0
margin_right = 544.0
margin_bottom = 114.0
size_flags_horizontal = 4
text = "选项"

[node name="QuitButton" type="Button" parent="UI/Menus/MainMenu"]
margin_left = 460.0
margin_top = 144.0
margin_right = 544.0
margin_bottom = 186.0
size_flags_horizontal = 4
text = "退出"

[node name="OptionsMenu" type="VBoxContainer" parent="UI/Menus"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -10.0
size_flags_horizontal = 4
size_flags_vertical = 2
theme = ExtResource( 2 )

[node name="BGMButton" type="Button" parent="UI/Menus/OptionsMenu"]
margin_right = 196.0
margin_bottom = 42.0
size_flags_horizontal = 4
text = "音乐：无"

[node name="SFXButton" type="Button" parent="UI/Menus/OptionsMenu"]
margin_top = 72.0
margin_right = 196.0
margin_bottom = 114.0
size_flags_horizontal = 4
text = "音效：开"

[node name="BackButton" type="Button" parent="UI/Menus/OptionsMenu"]
margin_left = 56.0
margin_top = 144.0
margin_right = 140.0
margin_bottom = 186.0
size_flags_horizontal = 4
text = "返回"

[node name="Transitions" type="AnimationPlayer" parent="UI/Menus"]
anims/ShowOptions = SubResource( 4 )

[node name="DayBackground" parent="." instance=ExtResource( 4 )]

[node name="ParallaxLayer" parent="DayBackground" index="0"]
motion_scale = Vector2( 0.2, 1 )

[node name="CloudLayer1" parent="DayBackground/ParallaxLayer" index="0"]
position = Vector2( 512, 144 )

[node name="ParallaxLayer2" parent="DayBackground" index="1"]
motion_scale = Vector2( 0.4, 1 )

[node name="CloudLayer2" parent="DayBackground/ParallaxLayer2" index="0"]
position = Vector2( 512, 384 )

[node name="ParallaxLayer3" parent="DayBackground" index="2"]
motion_scale = Vector2( 0.6, 1 )

[node name="Mountains" parent="DayBackground/ParallaxLayer3" index="0"]
position = Vector2( 512, 572 )

[node name="ClickSound" parent="." instance=ExtResource( 5 )]

[connection signal="pressed" from="UI/Menus/MainMenu/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="UI/Menus/MainMenu/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="UI/Menus/MainMenu/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="UI/Menus/OptionsMenu/SFXButton" to="." method="_on_SFXButton_pressed"]
[connection signal="pressed" from="UI/Menus/OptionsMenu/BackButton" to="." method="_on_BackButton_pressed"]

[editable path="DayBackground"]
